More modifications to bring up to modern standards

--- a/PrM1.vbproj
+++ b/PrM1.vbproj
@@ -127,6 +127,7 @@
     <Compile Include="ATSApiVB.vb">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MyList.vb" />
     <Compile Include="PrM.vb">
       <SubType>Code</SubType>
     </Compile>
